# JointBERT

./: README.md  pyproject.toml
joint_bert/: data_loader.py  main.py  predict.py  trainer.py  utils.py
joint_bert/data/: __init__.py
joint_bert/model/: __init__.py  modeling_jointalbert.py  modeling_jointbert.py  modeling_jointdistilbert.py
