[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joint_bert"
description = 'Pytorch implementation of JointBERT: "BERT for Joint Intent Classification and Slot Filling"'
version = "1.0.0"
dependencies = [
  "torch==2.0.1",
  "transformers==4.29.2",
  "seqeval==0.0.12",
  "pytorch-crf==0.7.2"
]
requires-python = ">=3.9"

[tool.setuptools.package-data]
"joint_bert.data" = ["*/*.txt"]
